export class HistoriaClinica {

    constructor(
        public id: number,
        public pacienteId: number,
        public fechaCreacion: Date
    ) {}
}